@@ -32,6 +32,7 @@
 #include "d3dx9core.h"
 #include "d3dx9mesh.h"
 #include "d3dx9shader.h"
+#include "d3dx9effect.h"
 #include "d3dx9tex.h"
 
 #define _FACDD 0x876
